--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/parser": "^5.0.1",
+    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
