--- a/src/PhoenixTask.WebApi/appsettings.json
+++ b/src/PhoenixTask.WebApi/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PhoenixTaskDb": "Data Source=.;Initial Catalog=PhoenixTaskDb;Integrated Security=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Issuer": "PhoenixTask",
+    "Audience": "localhost",
+    "SecurityKey": "8345BA1B-8AA5-4D43-BC5C-7070BDB6DAA6",
+    "TokenExpirationInMinutes": 60
+  }
 }
