--- a/src/PhoenixTask.WebApi/appsettings.json
+++ b/src/PhoenixTask.WebApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PhoenixTaskDb": "Data Source=.;Initial Catalog=PhoenixTaskDb;Integrated Security=True;TrustServerCertificate=True;"
+    "PhoenixTaskDb": "Server=SqlServerDb; Database=PhoenixTaskDb; User Id=sa; Password=A123456789a*; Trust Server Certificate=True;"
+    //,"PhoenixTaskDb": "Data Source=.;Initial Catalog=PhoenixTaskDb;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Issuer": "PhoenixTask",
