--- a/src/PhoenixTask.WebApi/PhoenixTask.WebApi.csproj
+++ b/src/PhoenixTask.WebApi/PhoenixTask.WebApi.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>c3bb5cac-fac8-42df-b0de-7bba2653a5dc</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
