--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.4"
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.13",
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/parser": "^5.0.1",
     "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
