Add Configuration For Database

--- a/src/PhoenixTask.WebApi/appsettings.json
+++ b/src/PhoenixTask.WebApi/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "RunIncontainer": true,
+  "RunIncontainer": false,
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"PhoenixTaskDb": "Server=SqlServerDb; Database=PhoenixTaskDb; User Id=sa; Password=A123456789a*; Trust Server Certificate=True;"
