--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/jalaali-js": "^1.1.3",
     "axios": "^1.7.2",
+    "jalaali-js": "^1.2.7",
     "next": "14.2.8",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
