--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "next": "14.2.8",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-date-object": "^2.1.9",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-multi-date-picker": "^4.5.2",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
