--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@types/jalaali-js": "^1.1.3",
     "axios": "^1.7.2",
+    "emoji-picker-react": "^4.12.0",
     "jalaali-js": "^1.2.7",
     "next": "14.2.8",
     "react": "^18.3.1",
