--- a/src/PhoenixTask.WebApi/NLog.config
+++ b/src/PhoenixTask.WebApi/NLog.config
@@ -8,6 +8,6 @@
 	</targets>
 
 	<rules>
-		<logger name="*" minlevel="Warning" writeTo="file,console" />
+		<logger name="*" minlevel="TRACE" writeTo="file,console" />
 	</rules>
 </nlog>
