chore: Remove unused code

--- a/src/PhoenixTask.WebApi/appsettings.json
+++ b/src/PhoenixTask.WebApi/appsettings.json
@@ -5,11 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "RunIncontainer": true,
+  "UseInMemoryDatabase": false,
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PhoenixTaskDb": "Server=SqlServerDb; Database=PhoenixTaskDb; User Id=sa; Password=A123456789a*; Trust Server Certificate=True;"
-    //"PhoenixTaskDb": "Data Source=.;Initial Catalog=PhoenixTaskDb;Integrated Security=True;TrustServerCertificate=True;"
+    //"PhoenixTaskDb": "Server=SqlServerDb; Database=PhoenixTaskDb; User Id=sa; Password=A123456789a*; Trust Server Certificate=True;"
+    "PhoenixTaskDb": "Data Source=.;Initial Catalog=PhoenixTaskDb;Integrated Security=True;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Issuer": "PhoenixTask",
